--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -666,9 +666,14 @@ sixty_min_pop
 
 ## Reclassify 'leastcost_motor' and extract from 'pop_data'
 
+# Create rasterlayer from 'lcm_df' (remove 'layer' column prior)
 View(lcm_df)
 lcm_df$layer = NULL
 View(lcm_df)
+
+lcm_raster <- rasterFromXYZ(lcm_df)
+plot(lcm_raster)
+
 
 ##########
 rcl_matrix <- data.frame(lower_limit = c(0, 30, 60, 90, 120, 150, 180, 240),
@@ -685,44 +690,31 @@ rcl_matrix_2 <- data.frame(time_boundary = c (0, 30, 60, 90, 120, 150, 180, 240,
 View(rcl_matrix_2)
 
 ##########
-rcl_matrix_3 <- c(0, 30, 1,
-                  30, 60, 2,
-                  60, 90, 3,
-                  90, 120, 4,
-                  120, 150, 5,
-                  150, 180, 6,
-                  180, 210, 7,
-                  210, 240, 8,
-                  240, 270, 9,
-                  270, 300, 10
-                  )
+rcl_matrix_3 <- c(0, 30, 1, # 30 minutes
+                  30, 60, 2, # 1 hour
+                  60, 180, 3, # 3 hours
+                  180, 360, 4, # 6 hours 
+                  360, 720, 5, # 12 hours
+                  720, 100000, 6 # 12+ hours
+)
 
 rcl_matrix_3 <- matrix(rcl_matrix_3, ncol=3, byrow=TRUE)
 View(rcl_matrix_3)
 
-# Create new raster of leastcost_motor time boundaries 
+# Reclassify 'lcm_raster' with 'rcl_matrix' 
+lcm_pop_data_rcl <- reclassify(lcm_raster, rcl_matrix_3, include.lowest=TRUE)
 
-# Reclassify 'XXX' with 'rcl_matrix' 
-lcm_pop_data_rcl <- reclassify(lcm_pop_data, rcl_matrix_3, include.lowest=TRUE)
+# Check as data.frame
 lcm_rcl_pop_data_df <- as.data.frame(lcm_pop_data_rcl, xy = TRUE)
 View(lcm_rcl_pop_data_df)
 
+# Zonal stuff
+lcm_rcl_zone <- zonal(pop_data, lcm_pop_data_rcl, fun = sum)
 
 
-
-lcm_rcl_zone <- zonal(pop_data, lcm_rcl, fun = sum)
 
 lcm_rcl_zone_df <- as.data.frame(lcm_rcl_zone, xy = TRUE)
 View(lcm_rcl_zone_df)
-
-
-
-
-
-
-
-
-
 
 ```
 
